PPL/BTL1/initial/initial/target/MiniGoParser.py
# Generated from main/minigo/parser/MiniGo.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MiniGoParser ( Parser ):

    grammarFileName = "MiniGo.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'var'", "'const'", "'struct'", "'interface'", 
                     "'type'", "'func'", "'if'", "'else if'", "'else'", 
                     "'for'", "'range'", "'return'", "'break'", "'continue'", 
                     "'int'", "'float'", "'boolean'", "'string'", "'('", 
                     "')'", "'{'", "'}'", "'['", "']'", "','", "';'", "':'", 
                     "'.'", "'='", "'+'", "'-'", "'*'", "'/'", "'%'", "'=='", 
                     "'!='", "'<'", "'<='", "'>'", "'>='", "'&&'", "'||'", 
                     "'!'", "':='", "'+='", "'-='", "'*='", "'/='", "'%='", 
                     "<INVALID>", "'nil'" ]

    symbolicNames = [ "<INVALID>", "VAR", "CONST", "STRUCT", "INTERFACE", 
                      "TYPE", "FUNC", "IF", "ELSEIF", "ELSE", "FOR", "RANGE", 
                      "RETURN", "BREAK", "CONTINUE", "INT", "FLOAT", "BOOLEAN", 
                      "STRING", "LPAREN", "RPAREN", "LBRACE", "RBRACE", 
                      "LBRACK", "RBRACK", "COMMA", "SEMI", "COLON", "DOT", 
                      "EQUAL", "PLUS", "MINUS", "MULT", "DIV", "MOD", "EQ", 
                      "NEQ", "LT", "LTE", "GT", "GTE", "AND", "OR", "NOT", 
                      "ASSIGN", "PLUS_ASSIGN", "MINUS_ASSIGN", "MULT_ASSIGN", 
                      "DIV_ASSIGN", "MOD_ASSIGN", "BOOLLIT", "NILLIT", "ID", 
                      "INTLIT", "FLOATLIT", "STRINGLIT", "COMMENT", "MULTILINE_COMMENT", 
                      "NEWLINE", "WS", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", 
                      "ERROR_CHAR" ]

    RULE_program = 0
    RULE_decl_list = 1
    RULE_decl_tail = 2
    RULE_decl = 3
    RULE_vardecl = 4
    RULE_var_init = 5
    RULE_var_init_extra = 6
    RULE_idlist = 7
    RULE_id_tail = 8
    RULE_exprlist = 9
    RULE_expr_tail = 10
    RULE_vartype = 11
    RULE_scalartype = 12
    RULE_constdecl = 13
    RULE_const_init = 14
    RULE_arraytype = 15
    RULE_array_size = 16
    RULE_array_type_tail = 17
    RULE_structtype = 18
    RULE_structdecl = 19
    RULE_element_list = 20
    RULE_interfacedecl = 21
    RULE_method_list = 22
    RULE_elements = 23
    RULE_methodbody = 24
    RULE_vartype_opt = 25
    RULE_typedecl = 26
    RULE_type_body = 27
    RULE_multiple_newline = 28
    RULE_multiple_newline_tail = 29
    RULE_endline = 30
    RULE_methoddecl = 31
    RULE_funcdecl = 32
    RULE_paramlist_opt = 33
    RULE_recevier = 34
    RULE_paramlist = 35
    RULE_param_tail = 36
    RULE_param = 37
    RULE_id_param_tail = 38
    RULE_stmt_list = 39
    RULE_stmt = 40
    RULE_assignstmt = 41
    RULE_lhs = 42
    RULE_assign_op = 43
    RULE_ifstmt = 44
    RULE_elseif_list = 45
    RULE_else_part = 46
    RULE_forstmt = 47
    RULE_forbasic = 48
    RULE_endline_opt = 49
    RULE_forstep = 50
    RULE_foreach = 51
    RULE_forinit = 52
    RULE_forinit_var = 53
    RULE_forcondition = 54
    RULE_forupdate = 55
    RULE_block = 56
    RULE_returnstmt = 57
    RULE_expr_opt = 58
    RULE_breakstmt = 59
    RULE_continuestmt = 60
    RULE_callstmt = 61
    RULE_call_expr = 62
    RULE_expr = 63
    RULE_expr_or = 64
    RULE_exp1 = 65
    RULE_exp1_and = 66
    RULE_exp2 = 67
    RULE_exp2_rel = 68
    RULE_rel_op = 69
    RULE_exp3 = 70
    RULE_exp3_add = 71
    RULE_add_op = 72
    RULE_exp4 = 73
    RULE_exp4_mul = 74
    RULE_mul_op = 75
    RULE_exp5 = 76
    RULE_unary_op = 77
    RULE_exp6 = 78
    RULE_exp6_access = 79
    RULE_access_part = 80
    RULE_exp7 = 81
    RULE_arraylit = 82
    RULE_lit_list = 83
    RULE_lit_tail = 84
    RULE_lit = 85
    RULE_lit_list_opt = 86
    RULE_structlit = 87
    RULE_structlit_items_opt = 88
    RULE_structlit_items_tail = 89
    RULE_astribute = 90
    RULE_methodcall = 91
    RULE_method_receiver = 92
    RULE_arg_list_opt = 93
    RULE_arg_list = 94
    RULE_arg_tail = 95
    RULE_funcall = 96
    RULE_arrayaccess = 97
    RULE_structaccess = 98
    RULE_access_opt = 99
    RULE_asaccess_list = 100
    RULE_access = 101
    RULE_access_tail = 102
    RULE_asaccess = 103

    ruleNames =  [ "program", "decl_list", "decl_tail", "decl", "vardecl", 
                   "var_init", "var_init_extra", "idlist", "id_tail", "exprlist", 
                   "expr_tail", "vartype", "scalartype", "constdecl", "const_init", 
                   "arraytype", "array_size", "array_type_tail", "structtype", 
                   "structdecl", "element_list", "interfacedecl", "method_list", 
                   "elements", "methodbody", "vartype_opt", "typedecl", 
                   "type_body", "multiple_newline", "multiple_newline_tail", 
                   "endline", "methoddecl", "funcdecl", "paramlist_opt", 
                   "recevier", "paramlist", "param_tail", "param", "id_param_tail", 
                   "stmt_list", "stmt", "assignstmt", "lhs", "assign_op", 
                   "ifstmt", "elseif_list", "else_part", "forstmt", "forbasic", 
                   "endline_opt", "forstep", "foreach", "forinit", "forinit_var", 
                   "forcondition", "forupdate", "block", "returnstmt", "expr_opt", 
                   "breakstmt", "continuestmt", "callstmt", "call_expr", 
                   "expr", "expr_or", "exp1", "exp1_and", "exp2", "exp2_rel", 
                   "rel_op", "exp3", "exp3_add", "add_op", "exp4", "exp4_mul", 
                   "mul_op", "exp5", "unary_op", "exp6", "exp6_access", 
                   "access_part", "exp7", "arraylit", "lit_list", "lit_tail", 
                   "lit", "lit_list_opt", "structlit", "structlit_items_opt", 
                   "structlit_items_tail", "astribute", "methodcall", "method_receiver", 
                   "arg_list_opt", "arg_list", "arg_tail", "funcall", "arrayaccess", 
                   "structaccess", "access_opt", "asaccess_list", "access", 
                   "access_tail", "asaccess" ]

    EOF = Token.EOF
    VAR=1
    CONST=2
    STRUCT=3
    INTERFACE=4
    TYPE=5
    FUNC=6
    IF=7
    ELSEIF=8
    ELSE=9
    FOR=10
    RANGE=11
    RETURN=12
    BREAK=13
    CONTINUE=14
    INT=15
    FLOAT=16
    BOOLEAN=17
    STRING=18
    LPAREN=19
    RPAREN=20
    LBRACE=21
    RBRACE=22
    LBRACK=23
    RBRACK=24
    COMMA=25
    SEMI=26
    COLON=27
    DOT=28
    EQUAL=29
    PLUS=30
    MINUS=31
    MULT=32
    DIV=33
    MOD=34
    EQ=35
    NEQ=36
    LT=37
    LTE=38
    GT=39
    GTE=40
    AND=41
    OR=42
    NOT=43
    ASSIGN=44
    PLUS_ASSIGN=45
    MINUS_ASSIGN=46
    MULT_ASSIGN=47
    DIV_ASSIGN=48
    MOD_ASSIGN=49
    BOOLLIT=50
    NILLIT=51
    ID=52
    INTLIT=53
    FLOATLIT=54
    STRINGLIT=55
    COMMENT=56
    MULTILINE_COMMENT=57
    NEWLINE=58
    WS=59
    UNCLOSE_STRING=60
    ILLEGAL_ESCAPE=61
    ERROR_CHAR=62

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl_list(self):
            return self.getTypedRuleContext(MiniGoParser.Decl_listContext,0)


        def EOF(self):
            return self.getToken(MiniGoParser.EOF, 0)

        def getRuleIndex(self):
            return MiniGoParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MiniGoParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 208
            self.decl_list()
            self.state = 209
            self.match(MiniGoParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Decl_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(MiniGoParser.DeclContext,0)


        def decl_tail(self):
            return self.getTypedRuleContext(MiniGoParser.Decl_tailContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_decl_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl_list" ):
                return visitor.visitDecl_list(self)
            else:
                return visitor.visitChildren(self)




    def decl_list(self):

        localctx = MiniGoParser.Decl_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decl_list)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 211
            self.decl()
            self.state = 212
            self.decl_tail()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Decl_tailContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(MiniGoParser.DeclContext,0)


        def decl_tail(self):
            return self.getTypedRuleContext(MiniGoParser.Decl_tailContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_decl_tail

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl_tail" ):
                return visitor.visitDecl_tail(self)
            else:
                return visitor.visitChildren(self)




    def decl_tail(self):

        localctx = MiniGoParser.Decl_tailContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_decl_tail)
        try:
            self.state = 218
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MiniGoParser.VAR, MiniGoParser.CONST, MiniGoParser.TYPE, MiniGoParser.FUNC, MiniGoParser.NEWLINE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 214
                self.decl()
                self.state = 215
                self.decl_tail()
                pass
            elif token in [MiniGoParser.EOF]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def funcdecl(self):
            return self.getTypedRuleContext(MiniGoParser.FuncdeclContext,0)


        def methoddecl(self):
            return self.getTypedRuleContext(MiniGoParser.MethoddeclContext,0)


        def vardecl(self):
            return self.getTypedRuleContext(MiniGoParser.VardeclContext,0)


        def constdecl(self):
            return self.getTypedRuleContext(MiniGoParser.ConstdeclContext,0)


        def typedecl(self):
            return self.getTypedRuleContext(MiniGoParser.TypedeclContext,0)


        def NEWLINE(self):
            return self.getToken(MiniGoParser.NEWLINE, 0)

        def getRuleIndex(self):
            return MiniGoParser.RULE_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl" ):
                return visitor.visitDecl(self)
            else:
                return visitor.visitChildren(self)




    def decl(self):

        localctx = MiniGoParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_decl)
        try:
            self.state = 226
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 220
                self.funcdecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 221
                self.methoddecl()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 222
                self.vardecl()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 223
                self.constdecl()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 224
                self.typedecl()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 225
                self.match(MiniGoParser.NEWLINE)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(MiniGoParser.VAR, 0)

        def idlist(self):
            return self.getTypedRuleContext(MiniGoParser.IdlistContext,0)


        def var_init(self):
            return self.getTypedRuleContext(MiniGoParser.Var_initContext,0)


        def endline(self):
            return self.getTypedRuleContext(MiniGoParser.EndlineContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_vardecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVardecl" ):
                return visitor.visitVardecl(self)
            else:
                return visitor.visitChildren(self)




    def vardecl(self):

        localctx = MiniGoParser.VardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_vardecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 228
            self.match(MiniGoParser.VAR)
            self.state = 229
            self.idlist()
            self.state = 230
            self.var_init()
            self.state = 231
            self.endline()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_initContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vartype(self):
            return self.getTypedRuleContext(MiniGoParser.VartypeContext,0)


        def var_init_extra(self):
            return self.getTypedRuleContext(MiniGoParser.Var_init_extraContext,0)


        def EQUAL(self):
            return self.getToken(MiniGoParser.EQUAL, 0)

        def exprlist(self):
            return self.getTypedRuleContext(MiniGoParser.ExprlistContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_var_init

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_init" ):
                return visitor.visitVar_init(self)
            else:
                return visitor.visitChildren(self)




    def var_init(self):

        localctx = MiniGoParser.Var_initContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_var_init)
        try:
            self.state = 238
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MiniGoParser.INT, MiniGoParser.FLOAT, MiniGoParser.BOOLEAN, MiniGoParser.STRING, MiniGoParser.LBRACK, MiniGoParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 233
                self.vartype()
                self.state = 234
                self.var_init_extra()
                pass
            elif token in [MiniGoParser.EQUAL]:
                self.enterOuterAlt(localctx, 2)
                self.state = 236
                self.match(MiniGoParser.EQUAL)
                self.state = 237
                self.exprlist()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_init_extraContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EQUAL(self):
            return self.getToken(MiniGoParser.EQUAL, 0)

        def exprlist(self):
            return self.getTypedRuleContext(MiniGoParser.ExprlistContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_var_init_extra

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_init_extra" ):
                return visitor.visitVar_init_extra(self)
            else:
                return visitor.visitChildren(self)




    def var_init_extra(self):

        localctx = MiniGoParser.Var_init_extraContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_var_init_extra)
        try:
            self.state = 243
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MiniGoParser.EQUAL]:
                self.enterOuterAlt(localctx, 1)
                self.state = 240
                self.match(MiniGoParser.EQUAL)
                self.state = 241
                self.exprlist()
                pass
            elif token in [MiniGoParser.SEMI, MiniGoParser.NEWLINE]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MiniGoParser.ID, 0)

        def id_tail(self):
            return self.getTypedRuleContext(MiniGoParser.Id_tailContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_idlist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdlist" ):
                return visitor.visitIdlist(self)
            else:
                return visitor.visitChildren(self)




    def idlist(self):

        localctx = MiniGoParser.IdlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_idlist)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 245
            self.match(MiniGoParser.ID)
            self.state = 246
            self.id_tail()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Id_tailContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMA(self):
            return self.getToken(MiniGoParser.COMMA, 0)

        def ID(self):
            return self.getToken(MiniGoParser.ID, 0)

        def id_tail(self):
            return self.getTypedRuleContext(MiniGoParser.Id_tailContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_id_tail

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitId_tail" ):
                return visitor.visitId_tail(self)
            else:
                return visitor.visitChildren(self)




    def id_tail(self):

        localctx = MiniGoParser.Id_tailContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_id_tail)
        try:
            self.state = 252
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MiniGoParser.COMMA]:
                self.enterOuterAlt(localctx, 1)
                self.state = 248
                self.match(MiniGoParser.COMMA)
                self.state = 249
                self.match(MiniGoParser.ID)
                self.state = 250
                self.id_tail()
                pass
            elif token in [MiniGoParser.INT, MiniGoParser.FLOAT, MiniGoParser.BOOLEAN, MiniGoParser.STRING, MiniGoParser.LBRACK, MiniGoParser.EQUAL, MiniGoParser.ID]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(MiniGoParser.ExprContext,0)


        def expr_tail(self):
            return self.getTypedRuleContext(MiniGoParser.Expr_tailContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_exprlist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprlist" ):
                return visitor.visitExprlist(self)
            else:
                return visitor.visitChildren(self)




    def exprlist(self):

        localctx = MiniGoParser.ExprlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_exprlist)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 254
            self.expr()
            self.state = 255
            self.expr_tail()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expr_tailContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
